--- a/devenv.yaml
+++ b/devenv.yaml
@@ -2,6 +2,9 @@
 inputs:
   nixpkgs:
     url: github:cachix/devenv-nixpkgs/rolling
+  advisory-db:
+    url: github:rustsec/advisory-db
+    flake: false
 
 # If you're using non-OSS software, you can set allowUnfree to true.
 # allowUnfree: true
