feat: use nix flake check instead of devenv test for docs, default-package and git-hooks
the tests are now with nix flake check --no-pure-eval and just all

--- a/.github/workflows/devenv-test.yml
+++ b/.github/workflows/devenv-test.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           name: devenv
       - name: Build the devenv shell and run any pre-commit hooks
-        run: nix develop --no-pure-eval --command devenv "test"
+        run: nix develop --no-pure-eval --command just-generate && nix develop --no-pure-eval -c just "all" && nix flake check --no-pure-eval
